--- a/chats-server/pom.xml
+++ b/chats-server/pom.xml
@@ -8,7 +8,7 @@
 		<version>3.2.4</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>karan-integradev.com</groupId>
+	<groupId>com.karan-integradev</groupId>
 	<artifactId>chats-server</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>chats-server</name>
